AME-8402 Fix table overflow for thin windows

--- a/openam-ui/openam-ui-ria/src/main/resources/css/am-common/structure/table.less
+++ b/openam-ui/openam-ui-ria/src/main/resources/css/am-common/structure/table.less
@@ -1,3 +1,8 @@
+.backgrid-container {
+    /* Prevents tables from overflowing when the container is too thin. This can and does happen. */
+    overflow: auto;
+}
+
 .table {
     /* Specificity must match Bootstrap's to override */
     > tbody > tr > td,
